# CV_Detection

./: .gitignore  CMakeLists.txt  human_detection.py
headers/: input.h
sources/: input.cpp  main.cpp
